# ElectronicEngineers

./: .gitignore  CMakeLists.txt  CompileShader.ps1  shadercopmile.cmd
Resources/opengl/shaders/userinterface/: fragment.glsl
VulkanMemoryAllocator/include/: vk_mem_alloc.h
res/shaders/: shader_base.vert
src/: Program.cpp
src/core/: Configuration.cpp  Configuration.h  FileManager.cpp  FileManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  MathHelper.h  Matrix4f.cpp  Matrix4f.h  Mouse.cpp  Mouse.h  Quaternion.h  Time.h  Transform.cpp  Transform.h  Vector2.h  Vector3.h  Vertex.cpp  Vertex.h
src/core/vec2/: Vector2d.cpp  Vector2d.h
src/core/vec3/: Vector3d.cpp  Vector3d.h
src/game_components/: Camera.cpp  Camera.h  GameComponent.h  ModelRender.cpp  ModelRender.h
src/rendering/: Display.cpp  Display.h  RenderingEngine.cpp  RenderingEngine.h  stb_image.h
src/rendering/opengl/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderResource.cpp  OpenGLShaderResource.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureResource.cpp  OpenGLTextureResource.h
src/rendering/openvr/: VREnvironment.cpp  VREnvironment.h  VRHandController.cpp  VRHandController.h  VirtualRealityController.cpp  VirtualRealityController.h
src/rendering/vulkan/: VulkanDebugger.cpp  VulkanDebugger.h  VulkanGraphicsCard.cpp  VulkanGraphicsCard.h  VulkanLogicalCard.cpp  VulkanLogicalCard.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/scene/: MainMenu.cpp  MainMenu.h  Scene.h
src/user_interface/: UiAnimator.cpp  UiAnimator.h  UiObject.cpp  UiObject.h
src/user_interface/ui_modifier/ui_location/: ILocation.h
src/user_interface/ui_modifier/ui_scale/: IScaler.h
